# MVPLABX

./: .gitignore  App.tsx  README.md  index.html  package.json
MVPLAB_VOICELAB/.agent/: rules.md
MVPLAB_VOICELAB/.claude/: settings.local.json
MVPLAB_VOICELAB/backend/app/: config.py
MVPLAB_VOICELAB/backend/app/services/: deepgram_service.py
MVPLAB_VOICELAB/docs/: BACKEND ARCHITECTURE.MD  IMPLEMENTATION.md  PRD.MD  Technical architecture.md  remaining taskj.md
MVPLAB_VOICELAB/frontend/src/: App.css
MVPLAB_VOICELAB/frontend/src-tauri/: Cargo.toml
MVPLAB_VOICELAB/frontend/src-tauri/src/: lib.rs
MVPLAB_VOICELAB/frontend/src/hooks/: useHotkey.ts  useVoiceStream.ts
MVPLAB_WEB/: App.tsx  Community.tsx  README.md  agent.md  constants.tsx  index.html  index.tsx  metadata.json  package-lock.json  package.json  types.ts
MVPLAB_WEB/src/components/auth/: ProtectedRoute.tsx
MVPLAB_WEB/src/components/blocks/: feature-section-with-bento-grid.tsx  features-2.tsx  hero-section-1.tsx
MVPLAB_WEB/src/components/layout/: Footer.tsx  Navbar.tsx
MVPLAB_WEB/src/components/ui/: SearchOverlay.tsx  animated-group.tsx  (+10 more)
MVPLAB_WEB/src/context/: AuthContext.tsx
MVPLAB_WEB/src/pages/: AIInvestmentPage.tsx  BlogPostPage.tsx  BlogsPage.tsx  BuildWithUsPage.tsx  ComingSoonPage.tsx  CommunityPage.tsx  DevelopersPage.tsx  FeaturedPage.tsx  InvestmentReviewsPage.tsx  LoginPage.tsx  NotFoundPage.tsx  OurAppsPage.tsx  ProductDetailPage.tsx
MVPLAB_WEB/src/utils/: supabaseClient.ts
apps/MVPLAB_VOICELAB/backend/: .env  requirements.txt
apps/MVPLAB_VOICELAB/docs/: OTHERS.MD
(+14 files in other folders)
