[package]
name = "tauri-app"
version = "0.1.0"
description = "Voice Lab — AI voice-to-text for developers"
authors = ["Voice Lab"]
edition = "2021"

[lib]
# The `_lib` suffix avoids a name collision with the bin on Windows
# See https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                       = { version = "2", features = [] }
tauri-plugin-opener         = "2"
tauri-plugin-global-shortcut = "2"
serde                       = { version = "1", features = ["derive"] }
serde_json                  = "1"
# enigo provides cross-platform keyboard/mouse simulation for cursor injection
enigo                       = "0.2"
